auth: Added e-mail & password auth method
Added Firebase auth option with e-mail & password

The firebase uid is stored within a local shared preferences
for other use cases

--- a/easy_park/android/app/src/main/AndroidManifest.xml
+++ b/easy_park/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.easy_park">
+    package="com.easy_park.dev">
    <application
         android:label="easy_park"
         android:name="${applicationName}"
