--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   firebase_auth: ^4.0.2
   shared_preferences: ^2.0.15
+  google_maps_flutter: ^2.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
