--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shared_preferences: ^2.0.15
   google_maps_flutter: ^2.2.1
   location: ^4.4.0
+  mysql_client: ^0.0.27
 
 
   # The following adds the Cupertino Icons font to your application.
