--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   google_maps_flutter: ^2.2.1
   location: ^4.4.0
   mysql_client: ^0.0.27
+  geocoding: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
