--- a/easy_park/android/app/build.gradle
+++ b/easy_park/android/app/build.gradle
@@ -27,7 +27,10 @@ if (flutterVersionName == null) {
 
 def googleMapsApiKey = localProperties.getProperty('googleMapsApiKey')
 if(googleMapsApiKey == null) {
-    googleMapsApiKey = System.getenv("GOOGLE_MAPS_API_KEY")
+    googleMapsApiKey = System.getenv("GOOGLE_MAPS_API_KEY")?:""
+    if(googleMapsApiKey == "") {
+        logger.error("Missing googleMapsApiKey")
+    }
 }
 
 apply plugin: 'com.android.application'
@@ -61,6 +64,7 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         manifestPlaceholders += [googleMapsApiKey: googleMapsApiKey]
+        logger.error(googleMapsApiKey)
     }
 
     buildTypes {
