--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_auth: ^4.0.2
+  firebase_core: ^2.4.0
   google_maps_flutter: ^2.2.1
   location: ^4.4.0
   mysql_client: ^0.0.27
