--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   geocoding: ^2.0.5
   isar: *isar_version
   isar_flutter_libs: *isar_version # contains Isar Core
+  flutter_riverpod: ^2.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
