--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   isar: *isar_version
   isar_flutter_libs: *isar_version # contains Isar Core
   flutter_riverpod: ^2.1.3
+  flutter_polyline_points: ^1.0.0
+  dio: ^4.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
