--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
     sdk: flutter
   firebase_auth: ^4.0.2
   firebase_core: ^2.4.0
-  google_maps_flutter: ^2.2.1
+  google_maps_flutter: ^2.2.5
   location: ^4.4.0
   mysql_client: ^0.0.27
   geocoding: ^2.0.5
@@ -43,7 +43,8 @@ dependencies:
   isar_flutter_libs: *isar_version # contains Isar Core
   flutter_riverpod: ^2.1.3
   flutter_polyline_points: ^1.0.0
-  dio: ^4.0.6
+  dio: ^5.1.0
+  uuid: ^3.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
