--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   dio: ^5.1.0
   uuid: ^3.0.7
+  intl: ^0.18.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
