--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -33,10 +33,10 @@ isar_version: &isar_version 3.0.5
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth: ^4.0.2
+  firebase_auth: ^4.4.0
   firebase_core: ^2.4.0
   google_maps_flutter: ^2.2.5
-  location: ^4.4.0
+  geolocator: ^9.0.2
   mysql_client: ^0.0.27
   geocoding: ^2.0.5
   isar: *isar_version
@@ -45,7 +45,7 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   dio: ^5.1.0
   uuid: ^3.0.7
-  intl: ^0.18.0
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
