Replaced custom navigation screen with Mapbox turn-by-turn navigation SDK

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,6 @@ doc/api/
 *.js.deps
 *.js.map
 *.env
-easy_park/.vscode/launch.json
+*/.vscode/launch.json
+*/android/gradle.properties
+*/android/app/src/main/res/values/strings.xml
