--- a/easy_park/android/app/src/main/AndroidManifest.xml
+++ b/easy_park/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
     package="com.easy_park.dev">
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
    <application
         android:label="easy_park"
         android:name="${applicationName}"
