--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dio: ^5.1.0
   uuid: ^3.0.7
   intl: ^0.17.0
+  flutter_mapbox_navigation: ^0.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
