--- a/easy_park/pubspec.yaml
+++ b/easy_park/pubspec.yaml
@@ -64,6 +64,14 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   isar_generator: *isar_version
   build_runner: ^2.3.3
+  flutter_launcher_icons: "^0.12.0"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21
+  adaptive_icon_background: "#1f271b"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
